--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,8 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
 
-.logo.react:hover {
+.logo:hover {
   filter: drop-shadow(0 0 2em #61dafb);
 }
 
-.logo.screenpipe:hover {
-  filter: drop-shadow(0 0 2em black);
-}
 body {
   margin: 0;
 }
@@ -27,6 +21,7 @@ body {
 
 .container {
   margin: 0;
+  background-color: #606060;
   padding-top: 10vh;
   display: flex;
   flex-direction: column;
@@ -110,7 +105,7 @@ button {
   width: 0;
   border-width: 0 8px 12px 8px;
   border-style: solid;
-  border-color: transparent transparent #2f2f2f transparent;
+  border-color: transparent transparent #606060 transparent;
   position: absolute;
   top: 0px;
   left: 50%;
